--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </nav>
       </div></header>
     <section class="skrollable u-clearfix u-image u-section-1" id="sec-b247" data-image-width="1920" data-image-height="1080">
-      <div class="u-clearfix u-sheet u-valign-top u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-top-xl u-sheet-1">
         <img class="custom-expanded u-image u-image-contain u-image-1" src="images/2NoTitleRedux21.png" data-image-width="538" data-image-height="447">
         <img class="u-image u-image-contain u-image-default u-image-2" src="images/redS2.png" alt="" data-image-width="3182" data-image-height="1853">
         <a href="https://gamebanana.com/wips/82862" class="u-align-left u-border-none u-btn u-btn-round u-button-style u-custom-font u-grey-70 u-hover-feature u-radius u-text-custom-color-4 u-text-hover-grey-60 u-btn-1" target="_blank">DOWNLOAD here</a>
@@ -117,7 +117,7 @@
                 <p class="u-align-left u-text u-text-white u-text-9"> - Octo Valley Hub</p>
                 <p class="u-align-left u-text u-text-white u-text-10">- Octo Valley Levels (W1-5)</p>
                 <p class="u-align-left u-text u-text-11">- Octo Valley Layouts</p>
-                <img class="u-image u-image-contain u-image-default u-opacity u-opacity-35 u-preserve-proportions u-image-2" src="images/Unbenannt-21-11.png" alt="" data-image-width="146" data-image-height="150">
+                <img class="u-image u-image-contain u-image-default u-opacity u-opacity-35 u-preserve-proportions u-image-2" src="images/Unbenannt-21-10.png" alt="" data-image-width="146" data-image-height="150">
                 <p class="u-align-left u-text u-text-12">- Music</p>
               </div>
             </div>
@@ -140,12 +140,12 @@
       <h2 class="u-custom-font u-text u-text-default u-text-1">Octo Valley</h2>
       <h2 class="u-custom-font u-text u-text-2">Map Ports</h2>
       <h2 class="u-custom-font u-text u-text-default u-text-3">Assets </h2>
-      <div class="custom-expanded u-carousel u-gallery u-gallery-slider u-layout-carousel u-lightbox u-no-transition u-show-text-none u-gallery-1" id="carousel-9b67" data-interval="3250" data-u-ride="carousel">
+      <div class="custom-expanded u-carousel u-gallery u-gallery-slider u-layout-carousel u-lightbox u-no-transition u-show-text-none u-gallery-1" id="carousel-1ca0" data-interval="3250" data-u-ride="carousel">
         <ol class="u-absolute-hcenter u-carousel-indicators u-carousel-indicators-1">
-          <li data-u-target="#carousel-9b67" data-u-slide-to="0" class="u-active u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
-          <li data-u-target="#carousel-9b67" data-u-slide-to="1" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
-          <li data-u-target="#carousel-9b67" data-u-slide-to="2" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
-          <li data-u-target="#carousel-9b67" data-u-slide-to="3" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-1ca0" data-u-slide-to="0" class="u-active u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-1ca0" data-u-slide-to="1" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-1ca0" data-u-slide-to="2" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-1ca0" data-u-slide-to="3" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
         </ol>
         <div class="u-carousel-inner u-gallery-inner" role="listbox">
           <div class="u-active u-carousel-item u-gallery-item u-carousel-item-1" data-image-width="2560" data-image-height="1440">
@@ -193,7 +193,7 @@
             <style data-mode="XS"></style>
           </div>
         </div>
-        <a class="u-absolute-vcenter u-black u-carousel-control u-carousel-control-prev u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-body-alt-color u-carousel-control-1" href="#carousel-9b67" role="button" data-u-slide="prev">
+        <a class="u-absolute-vcenter u-black u-carousel-control u-carousel-control-prev u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-body-alt-color u-carousel-control-1" href="#carousel-1ca0" role="button" data-u-slide="prev">
           <span aria-hidden="true">
             <svg x="0px" y="0px" viewBox="0 0 16 16"><path d="M8,1v4h8l0,6H8v4L0,8L8,1z"></path></svg>
           </span>
@@ -201,7 +201,7 @@
             <svg x="0px" y="0px" viewBox="0 0 16 16"><path d="M8,1v4h8l0,6H8v4L0,8L8,1z"></path></svg>
           </span>
         </a>
-        <a class="u-absolute-vcenter u-black u-carousel-control u-carousel-control-next u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-body-alt-color u-carousel-control-2" href="#carousel-9b67" role="button" data-u-slide="next">
+        <a class="u-absolute-vcenter u-black u-carousel-control u-carousel-control-next u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-body-alt-color u-carousel-control-2" href="#carousel-1ca0" role="button" data-u-slide="next">
           <span aria-hidden="true">
             <svg x="0px" y="0px" viewBox="0 0 16 16"><path d="M16,8l-8,7v-4H0l0-6h8V1L16,8z"></path></svg>
           </span>
@@ -210,16 +210,16 @@
           </span>
         </a>
       </div>
-      <div class="custom-expanded u-carousel u-gallery u-gallery-slider u-layout-carousel u-lightbox u-no-transition u-show-text-none u-gallery-2" id="carousel-79ba" data-interval="3250" data-u-ride="carousel">
+      <div class="custom-expanded u-carousel u-gallery u-gallery-slider u-layout-carousel u-lightbox u-no-transition u-show-text-none u-gallery-2" id="carousel-0e70" data-interval="3250" data-u-ride="carousel">
         <ol class="u-absolute-hcenter u-carousel-indicators u-carousel-indicators-2">
-          <li data-u-target="#carousel-79ba" data-u-slide-to="0" class="u-active u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
-          <li data-u-target="#carousel-79ba" data-u-slide-to="1" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
-          <li data-u-target="#carousel-79ba" data-u-slide-to="2" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
-          <li data-u-target="#carousel-79ba" data-u-slide-to="3" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
-          <li data-u-target="#carousel-79ba" data-u-slide-to="4" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
-          <li data-u-target="#carousel-79ba" data-u-slide-to="5" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
-          <li data-u-target="#carousel-79ba" data-u-slide-to="6" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
-          <li data-u-target="#carousel-79ba" data-u-slide-to="7" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-0e70" data-u-slide-to="0" class="u-active u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-0e70" data-u-slide-to="1" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-0e70" data-u-slide-to="2" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-0e70" data-u-slide-to="3" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-0e70" data-u-slide-to="4" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-0e70" data-u-slide-to="5" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-0e70" data-u-slide-to="6" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-0e70" data-u-slide-to="7" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
         </ol>
         <div class="u-carousel-inner u-gallery-inner" role="listbox">
           <div class="u-active u-carousel-item u-gallery-item u-carousel-item-5" data-image-width="1920" data-image-height="1080">
@@ -305,7 +305,7 @@
             <style data-mode="XS" data-visited="true"></style>
           </div>
         </div>
-        <a class="u-absolute-vcenter u-black u-carousel-control u-carousel-control-prev u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-carousel-control-3" href="#carousel-79ba" role="button" data-u-slide="prev">
+        <a class="u-absolute-vcenter u-black u-carousel-control u-carousel-control-prev u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-carousel-control-3" href="#carousel-0e70" role="button" data-u-slide="prev">
           <span aria-hidden="true">
             <svg x="0px" y="0px" viewBox="0 0 16 16"><path d="M8,1v4h8l0,6H8v4L0,8L8,1z"></path></svg>
           </span>
@@ -313,7 +313,7 @@
             <svg x="0px" y="0px" viewBox="0 0 16 16"><path d="M8,1v4h8l0,6H8v4L0,8L8,1z"></path></svg>
           </span>
         </a>
-        <a class="u-absolute-vcenter u-black u-carousel-control u-carousel-control-next u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-carousel-control-4" href="#carousel-79ba" role="button" data-u-slide="next">
+        <a class="u-absolute-vcenter u-black u-carousel-control u-carousel-control-next u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-carousel-control-4" href="#carousel-0e70" role="button" data-u-slide="next">
           <span aria-hidden="true">
             <svg x="0px" y="0px" viewBox="0 0 16 16"><path d="M16,8l-8,7v-4H0l0-6h8V1L16,8z"></path></svg>
           </span>
@@ -322,25 +322,25 @@
           </span>
         </a>
       </div>
-      <div class="custom-expanded u-carousel u-gallery u-gallery-slider u-layout-carousel u-lightbox u-no-transition u-show-text-none u-gallery-3" id="carousel-db4c" data-interval="2250" data-u-ride="carousel">
+      <div class="custom-expanded u-carousel u-gallery u-gallery-slider u-layout-carousel u-lightbox u-no-transition u-show-text-none u-gallery-3" id="carousel-2d07" data-interval="2250" data-u-ride="carousel">
         <ol class="u-absolute-hcenter u-carousel-indicators u-carousel-indicators-3">
-          <li data-u-target="#carousel-db4c" data-u-slide-to="0" class="u-active u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
-          <li data-u-target="#carousel-db4c" data-u-slide-to="1" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
-          <li data-u-target="#carousel-db4c" data-u-slide-to="2" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
-          <li data-u-target="#carousel-db4c" data-u-slide-to="3" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
-          <li data-u-target="#carousel-db4c" data-u-slide-to="4" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
-          <li data-u-target="#carousel-db4c" data-u-slide-to="5" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
-          <li data-u-target="#carousel-db4c" data-u-slide-to="6" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
-          <li data-u-target="#carousel-db4c" data-u-slide-to="7" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
-          <li data-u-target="#carousel-db4c" data-u-slide-to="8" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
-          <li data-u-target="#carousel-db4c" data-u-slide-to="9" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
-          <li data-u-target="#carousel-db4c" data-u-slide-to="10" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
-          <li data-u-target="#carousel-db4c" data-u-slide-to="11" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
-          <li data-u-target="#carousel-db4c" data-u-slide-to="12" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
-          <li data-u-target="#carousel-db4c" data-u-slide-to="13" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
-          <li data-u-target="#carousel-db4c" data-u-slide-to="14" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
-          <li data-u-target="#carousel-db4c" data-u-slide-to="15" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
-          <li data-u-target="#carousel-db4c" data-u-slide-to="16" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-2d07" data-u-slide-to="0" class="u-active u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-2d07" data-u-slide-to="1" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-2d07" data-u-slide-to="2" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-2d07" data-u-slide-to="3" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-2d07" data-u-slide-to="4" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-2d07" data-u-slide-to="5" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-2d07" data-u-slide-to="6" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-2d07" data-u-slide-to="7" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-2d07" data-u-slide-to="8" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-2d07" data-u-slide-to="9" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-2d07" data-u-slide-to="10" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-2d07" data-u-slide-to="11" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-2d07" data-u-slide-to="12" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-2d07" data-u-slide-to="13" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-2d07" data-u-slide-to="14" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-2d07" data-u-slide-to="15" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-2d07" data-u-slide-to="16" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
         </ol>
         <div class="u-carousel-inner u-gallery-inner" role="listbox">
           <div class="u-active u-carousel-item u-gallery-item u-shape-rectangle u-carousel-item-13" data-image-width="1920" data-image-height="1080">
@@ -523,7 +523,7 @@
             <style data-mode="XS" data-visited="true"></style>
           </div>
         </div>
-        <a class="u-absolute-vcenter u-black u-carousel-control u-carousel-control-prev u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-carousel-control-5" href="#carousel-db4c" role="button" data-u-slide="prev">
+        <a class="u-absolute-vcenter u-black u-carousel-control u-carousel-control-prev u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-carousel-control-5" href="#carousel-2d07" role="button" data-u-slide="prev">
           <span aria-hidden="true">
             <svg x="0px" y="0px" viewBox="0 0 16 16"><path d="M8,1v4h8l0,6H8v4L0,8L8,1z"></path></svg>
           </span>
@@ -531,7 +531,7 @@
             <svg x="0px" y="0px" viewBox="0 0 16 16"><path d="M8,1v4h8l0,6H8v4L0,8L8,1z"></path></svg>
           </span>
         </a>
-        <a class="u-absolute-vcenter u-black u-carousel-control u-carousel-control-next u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-carousel-control-6" href="#carousel-db4c" role="button" data-u-slide="next">
+        <a class="u-absolute-vcenter u-black u-carousel-control u-carousel-control-next u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-carousel-control-6" href="#carousel-2d07" role="button" data-u-slide="next">
           <span aria-hidden="true">
             <svg x="0px" y="0px" viewBox="0 0 16 16"><path d="M16,8l-8,7v-4H0l0-6h8V1L16,8z"></path></svg>
           </span>
