--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
         </nav>
       </div></header>
     <section class="skrollable u-clearfix u-image u-section-1" id="sec-b247" data-image-width="1920" data-image-height="1080">
-      <div class="u-clearfix u-sheet u-valign-top-xl u-sheet-1">
-        <img class="custom-expanded u-image u-image-contain u-image-1" src="images/2NoTitleRedux21.png" data-image-width="538" data-image-height="447">
+      <div class="u-clearfix u-sheet u-sheet-1">
+        <img class="u-image u-image-contain u-image-default u-image-1" src="images/2NoTitleRedux21.png" alt="" data-image-width="538" data-image-height="447">
         <img class="u-image u-image-contain u-image-default u-image-2" src="images/redS2.png" alt="" data-image-width="3182" data-image-height="1853">
         <a href="https://gamebanana.com/wips/82862" class="u-align-left u-border-none u-btn u-btn-round u-button-style u-custom-font u-grey-70 u-hover-feature u-radius u-text-custom-color-4 u-text-hover-grey-60 u-btn-1" target="_blank">DOWNLOAD here</a>
       </div>
