--- a/Home.html
+++ b/Home.html
@@ -78,8 +78,8 @@
         </nav>
       </div></header>
     <section class="skrollable u-clearfix u-image u-section-1" id="sec-b247" data-image-width="1920" data-image-height="1080">
-      <div class="u-clearfix u-sheet u-sheet-1">
-        <img class="u-image u-image-contain u-image-default u-image-1" src="images/2NoTitleRedux21.png" alt="" data-image-width="538" data-image-height="447">
+      <div class="u-clearfix u-sheet u-valign-top u-sheet-1">
+        <img class="custom-expanded u-image u-image-contain u-image-default u-image-1" src="images/2NoTitleRedux27.png" alt="" data-image-width="1388" data-image-height="1194">
         <img class="u-image u-image-contain u-image-default u-image-2" src="images/redS2.png" alt="" data-image-width="3182" data-image-height="1853">
         <a href="https://gamebanana.com/wips/82862" class="u-align-left u-border-none u-btn u-btn-round u-button-style u-custom-font u-grey-70 u-hover-feature u-radius u-text-custom-color-4 u-text-hover-grey-60 u-btn-1" target="_blank">DOWNLOAD here</a>
       </div>
@@ -117,7 +117,7 @@
                 <p class="u-align-left u-text u-text-white u-text-9"> - Octo Valley Hub</p>
                 <p class="u-align-left u-text u-text-white u-text-10">- Octo Valley Levels (W1-5)</p>
                 <p class="u-align-left u-text u-text-11">- Octo Valley Layouts</p>
-                <img class="u-image u-image-contain u-image-default u-opacity u-opacity-35 u-preserve-proportions u-image-2" src="images/Unbenannt-21-10.png" alt="" data-image-width="146" data-image-height="150">
+                <img class="u-image u-image-contain u-image-default u-opacity u-opacity-35 u-preserve-proportions u-image-2" src="images/Unbenannt-21-9.png" alt="" data-image-width="146" data-image-height="150">
                 <p class="u-align-left u-text u-text-12">- Music</p>
               </div>
             </div>
