--- a/Updates.html
+++ b/Updates.html
@@ -78,7 +78,7 @@
     <section class="u-clearfix u-grey-80 u-valign-middle-xs u-section-1" id="sec-9266">
       
       
-      <h2 class="u-align-center u-custom-font u-hover-feature u-text u-text-1">Project Redux Upcoming Changes for <span class="u-text-palette-3-base">Wave 3</span>
+      <h2 class="u-align-center u-custom-font u-hover-feature u-text u-text-1">Project Redux - Upcoming Changes for <span class="u-text-palette-3-base">Wave 3</span>
       </h2>
       <p class="u-align-center u-hover-feature u-text u-text-body-alt-color u-text-2">We're constantly updating our mod to add new content and fix issues.<br>Here's a overview of what we've added and changed in Wave 3 (NOT yet released)<br>
         <span class="u-text-grey-60">Note: ​What you get to see on this Site could be unfinished and have bugs which we are going to fix before release.</span>
