--- a/Home.html
+++ b/Home.html
@@ -588,9 +588,9 @@
     
     <section class="u-backlink u-clearfix u-grey-80">
       <p class="u-text">
-        <span>This site was created with the </span>
+        <span></span>
         <a class="u-link" href="https://nicepage.com/" target="_blank" rel="nofollow">
-          <span>Nicepage</span>
+          <span></span>
         </a>
       </p>
     </section>
