--- a/Team.html
+++ b/Team.html
@@ -191,7 +191,7 @@
           <div class="u-align-center u-container-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle u-list-item-12" data-animation-direction="Up" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">
             <div class="u-container-layout u-similar-container u-container-layout-12"><span class="u-align-center u-border-2 u-border-white u-file-icon u-hover-feature u-icon u-icon-circle u-icon-12" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><img src="images/arrna.png" alt=""></span>
               <h4 class="u-align-center u-hover-feature u-text u-text-25"> Arrna </h4>
-              <p class="u-align-center u-text u-text-26">Sample text. Click to select the Text Element.</p>
+              <p class="u-align-center u-text u-text-26">Lost in Rainbow Alterna.</p>
             </div>
           </div>
           <div class="u-align-center u-container-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle u-list-item-13" data-animation-direction="Up" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">
