--- a/Home.html
+++ b/Home.html
@@ -96,7 +96,7 @@
       
     </section>
     <section class="u-clearfix u-grey-80 u-section-3" id="sec-11d3">
-      <a href="#" class="u-border-none u-btn u-btn-round u-button-style u-custom-font u-grey-75 u-hover-grey-70 u-radius u-text-body-alt-color u-btn-1">What we do? </a>
+      <a href="#" class="u-border-none u-btn u-btn-round u-button-style u-custom-font u-grey-75 u-hover-grey-70 u-radius u-text-body-alt-color u-btn-1">What DO we do? </a>
       <div class="custom-expanded u-list u-list-1">
         <div class="u-repeater u-repeater-1">
           <div class="u-align-left u-bottom-right-radius-50 u-container-style u-grey-70 u-list-item u-opacity u-opacity-90 u-repeater-item u-shape-round u-top-right-radius-50 u-list-item-1">
@@ -107,7 +107,7 @@
               <p class="u-align-left u-text u-text-white u-text-4">- Upgraded Enviroment</p>
               <p class="u-align-left u-text u-text-5">- Weapons Kits/Gears<br>
               </p>
-              <img class="u-image u-image-contain u-image-default u-opacity u-opacity-35 u-preserve-proportions u-image-1" src="images/Unbenannt-21-10.png" alt="" data-image-width="109" data-image-height="112">
+              <img class="u-image u-image-contain u-image-default u-opacity u-opacity-35 u-preserve-proportions u-image-1" src="images/Unbenannt-21.png" alt="" data-image-width="109" data-image-height="112">
               <p class="u-align-left u-text u-text-6">- Layouts</p>
             </div>
           </div>
@@ -119,7 +119,7 @@
               <p class="u-align-left u-text u-text-white u-text-9"> - Octo Valley Hub</p>
               <p class="u-align-left u-text u-text-white u-text-10">- Octo Valley Levels (W1-5)</p>
               <p class="u-align-left u-text u-text-11">- Octo Valley Layouts</p>
-              <img class="u-image u-image-contain u-image-default u-opacity u-opacity-35 u-preserve-proportions u-image-2" src="images/Unbenannt-21.png" alt="" data-image-width="146" data-image-height="150">
+              <img class="u-image u-image-contain u-image-default u-opacity u-opacity-35 u-preserve-proportions u-image-2" src="images/Unbenannt-21-11.png" alt="" data-image-width="146" data-image-height="150">
               <p class="u-align-left u-text u-text-12">- Music</p>
             </div>
           </div>
@@ -130,7 +130,7 @@
               <p class="u-align-left u-text u-text-white u-text-15"> - Weapon Kits/Gears</p>
               <p class="u-align-left u-text u-text-white u-text-16">- Music</p>
               <p class="u-align-left u-text u-text-17">- Models</p>
-              <img class="u-image u-image-contain u-image-default u-opacity u-opacity-35 u-preserve-proportions u-image-3" src="images/Unbenannt-21-10.png" alt="" data-image-width="109" data-image-height="112">
+              <img class="u-image u-image-contain u-image-default u-opacity u-opacity-35 u-preserve-proportions u-image-3" src="images/Unbenannt-21.png" alt="" data-image-width="109" data-image-height="112">
               <p class="u-align-left u-text u-text-18">- Enviroments</p>
             </div>
           </div>
@@ -144,12 +144,12 @@
       <h2 class="u-custom-font u-text u-text-default u-text-1">Assets </h2>
       <h2 class="u-custom-font u-text u-text-2">Map Ports</h2>
       <h2 class="u-custom-font u-text u-text-default u-text-3">Octo Valley</h2>
-      <div class="custom-expanded u-carousel u-gallery u-gallery-slider u-layout-carousel u-lightbox u-no-transition u-show-text-none u-gallery-1" id="carousel-a91f" data-interval="3250" data-u-ride="carousel">
+      <div class="custom-expanded u-carousel u-gallery u-gallery-slider u-layout-carousel u-lightbox u-no-transition u-show-text-none u-gallery-1" id="carousel-b9d4" data-interval="3250" data-u-ride="carousel">
         <ol class="u-absolute-hcenter u-carousel-indicators u-carousel-indicators-1">
-          <li data-u-target="#carousel-a91f" data-u-slide-to="0" class="u-active u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
-          <li data-u-target="#carousel-a91f" data-u-slide-to="1" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
-          <li data-u-target="#carousel-a91f" data-u-slide-to="2" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
-          <li data-u-target="#carousel-a91f" data-u-slide-to="3" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-b9d4" data-u-slide-to="0" class="u-active u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-b9d4" data-u-slide-to="1" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-b9d4" data-u-slide-to="2" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-b9d4" data-u-slide-to="3" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
         </ol>
         <div class="u-carousel-inner u-gallery-inner" role="listbox">
           <div class="u-active u-carousel-item u-gallery-item u-carousel-item-1" data-image-width="2560" data-image-height="1440">
@@ -197,7 +197,7 @@
             <style data-mode="XS"></style>
           </div>
         </div>
-        <a class="u-absolute-vcenter u-black u-carousel-control u-carousel-control-prev u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-body-alt-color u-carousel-control-1" href="#carousel-a91f" role="button" data-u-slide="prev">
+        <a class="u-absolute-vcenter u-black u-carousel-control u-carousel-control-prev u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-body-alt-color u-carousel-control-1" href="#carousel-b9d4" role="button" data-u-slide="prev">
           <span aria-hidden="true">
             <svg x="0px" y="0px" viewBox="0 0 16 16"><path d="M8,1v4h8l0,6H8v4L0,8L8,1z"></path></svg>
           </span>
@@ -205,7 +205,7 @@
             <svg x="0px" y="0px" viewBox="0 0 16 16"><path d="M8,1v4h8l0,6H8v4L0,8L8,1z"></path></svg>
           </span>
         </a>
-        <a class="u-absolute-vcenter u-black u-carousel-control u-carousel-control-next u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-body-alt-color u-carousel-control-2" href="#carousel-a91f" role="button" data-u-slide="next">
+        <a class="u-absolute-vcenter u-black u-carousel-control u-carousel-control-next u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-body-alt-color u-carousel-control-2" href="#carousel-b9d4" role="button" data-u-slide="next">
           <span aria-hidden="true">
             <svg x="0px" y="0px" viewBox="0 0 16 16"><path d="M16,8l-8,7v-4H0l0-6h8V1L16,8z"></path></svg>
           </span>
@@ -214,15 +214,15 @@
           </span>
         </a>
       </div>
-      <div class="custom-expanded u-carousel u-gallery u-gallery-slider u-layout-carousel u-lightbox u-no-transition u-show-text-none u-gallery-2" id="carousel-e202" data-interval="3250" data-u-ride="carousel">
+      <div class="custom-expanded u-carousel u-gallery u-gallery-slider u-layout-carousel u-lightbox u-no-transition u-show-text-none u-gallery-2" id="carousel-6664" data-interval="3250" data-u-ride="carousel">
         <ol class="u-absolute-hcenter u-carousel-indicators u-carousel-indicators-2">
-          <li data-u-target="#carousel-e202" data-u-slide-to="0" class="u-active u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
-          <li data-u-target="#carousel-e202" data-u-slide-to="1" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
-          <li data-u-target="#carousel-e202" data-u-slide-to="2" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
-          <li data-u-target="#carousel-e202" data-u-slide-to="3" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
-          <li data-u-target="#carousel-e202" data-u-slide-to="4" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
-          <li data-u-target="#carousel-e202" data-u-slide-to="5" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
-          <li data-u-target="#carousel-e202" data-u-slide-to="6" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-6664" data-u-slide-to="0" class="u-active u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-6664" data-u-slide-to="1" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-6664" data-u-slide-to="2" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-6664" data-u-slide-to="3" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-6664" data-u-slide-to="4" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-6664" data-u-slide-to="5" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-6664" data-u-slide-to="6" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
         </ol>
         <div class="u-carousel-inner u-gallery-inner" role="listbox">
           <div class="u-active u-carousel-item u-gallery-item u-carousel-item-5" data-image-width="1920" data-image-height="1080">
@@ -297,7 +297,7 @@
             <style data-mode="XS" data-visited="true"></style>
           </div>
         </div>
-        <a class="u-absolute-vcenter u-black u-carousel-control u-carousel-control-prev u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-carousel-control-3" href="#carousel-e202" role="button" data-u-slide="prev">
+        <a class="u-absolute-vcenter u-black u-carousel-control u-carousel-control-prev u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-carousel-control-3" href="#carousel-6664" role="button" data-u-slide="prev">
           <span aria-hidden="true">
             <svg x="0px" y="0px" viewBox="0 0 16 16"><path d="M8,1v4h8l0,6H8v4L0,8L8,1z"></path></svg>
           </span>
@@ -305,7 +305,7 @@
             <svg x="0px" y="0px" viewBox="0 0 16 16"><path d="M8,1v4h8l0,6H8v4L0,8L8,1z"></path></svg>
           </span>
         </a>
-        <a class="u-absolute-vcenter u-black u-carousel-control u-carousel-control-next u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-carousel-control-4" href="#carousel-e202" role="button" data-u-slide="next">
+        <a class="u-absolute-vcenter u-black u-carousel-control u-carousel-control-next u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-carousel-control-4" href="#carousel-6664" role="button" data-u-slide="next">
           <span aria-hidden="true">
             <svg x="0px" y="0px" viewBox="0 0 16 16"><path d="M16,8l-8,7v-4H0l0-6h8V1L16,8z"></path></svg>
           </span>
@@ -314,25 +314,25 @@
           </span>
         </a>
       </div>
-      <div class="custom-expanded u-carousel u-gallery u-gallery-slider u-layout-carousel u-lightbox u-no-transition u-show-text-none u-gallery-3" id="carousel-07a9" data-interval="2250" data-u-ride="carousel">
+      <div class="custom-expanded u-carousel u-gallery u-gallery-slider u-layout-carousel u-lightbox u-no-transition u-show-text-none u-gallery-3" id="carousel-b3db" data-interval="2250" data-u-ride="carousel">
         <ol class="u-absolute-hcenter u-carousel-indicators u-carousel-indicators-3">
-          <li data-u-target="#carousel-07a9" data-u-slide-to="0" class="u-active u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
-          <li data-u-target="#carousel-07a9" data-u-slide-to="1" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
-          <li data-u-target="#carousel-07a9" data-u-slide-to="2" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
-          <li data-u-target="#carousel-07a9" data-u-slide-to="3" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
-          <li data-u-target="#carousel-07a9" data-u-slide-to="4" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
-          <li data-u-target="#carousel-07a9" data-u-slide-to="5" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
-          <li data-u-target="#carousel-07a9" data-u-slide-to="6" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
-          <li data-u-target="#carousel-07a9" data-u-slide-to="7" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
-          <li data-u-target="#carousel-07a9" data-u-slide-to="8" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
-          <li data-u-target="#carousel-07a9" data-u-slide-to="9" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
-          <li data-u-target="#carousel-07a9" data-u-slide-to="10" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
-          <li data-u-target="#carousel-07a9" data-u-slide-to="11" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
-          <li data-u-target="#carousel-07a9" data-u-slide-to="12" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
-          <li data-u-target="#carousel-07a9" data-u-slide-to="13" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
-          <li data-u-target="#carousel-07a9" data-u-slide-to="14" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
-          <li data-u-target="#carousel-07a9" data-u-slide-to="15" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
-          <li data-u-target="#carousel-07a9" data-u-slide-to="16" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-b3db" data-u-slide-to="0" class="u-active u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-b3db" data-u-slide-to="1" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-b3db" data-u-slide-to="2" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-b3db" data-u-slide-to="3" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-b3db" data-u-slide-to="4" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-b3db" data-u-slide-to="5" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-b3db" data-u-slide-to="6" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-b3db" data-u-slide-to="7" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-b3db" data-u-slide-to="8" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-b3db" data-u-slide-to="9" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-b3db" data-u-slide-to="10" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-b3db" data-u-slide-to="11" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-b3db" data-u-slide-to="12" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-b3db" data-u-slide-to="13" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-b3db" data-u-slide-to="14" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-b3db" data-u-slide-to="15" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
+          <li data-u-target="#carousel-b3db" data-u-slide-to="16" class="u-shape-rectangle u-white" style="width: 30px; height: 3px;"></li>
         </ol>
         <div class="u-carousel-inner u-gallery-inner" role="listbox">
           <div class="u-active u-carousel-item u-gallery-item u-shape-rectangle u-carousel-item-12" data-image-width="1920" data-image-height="1080">
@@ -515,7 +515,7 @@
             <style data-mode="XS" data-visited="true"></style>
           </div>
         </div>
-        <a class="u-absolute-vcenter u-black u-carousel-control u-carousel-control-prev u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-carousel-control-5" href="#carousel-07a9" role="button" data-u-slide="prev">
+        <a class="u-absolute-vcenter u-black u-carousel-control u-carousel-control-prev u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-carousel-control-5" href="#carousel-b3db" role="button" data-u-slide="prev">
           <span aria-hidden="true">
             <svg x="0px" y="0px" viewBox="0 0 16 16"><path d="M8,1v4h8l0,6H8v4L0,8L8,1z"></path></svg>
           </span>
@@ -523,7 +523,7 @@
             <svg x="0px" y="0px" viewBox="0 0 16 16"><path d="M8,1v4h8l0,6H8v4L0,8L8,1z"></path></svg>
           </span>
         </a>
-        <a class="u-absolute-vcenter u-black u-carousel-control u-carousel-control-next u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-carousel-control-6" href="#carousel-07a9" role="button" data-u-slide="next">
+        <a class="u-absolute-vcenter u-black u-carousel-control u-carousel-control-next u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-carousel-control-6" href="#carousel-b3db" role="button" data-u-slide="next">
           <span aria-hidden="true">
             <svg x="0px" y="0px" viewBox="0 0 16 16"><path d="M16,8l-8,7v-4H0l0-6h8V1L16,8z"></path></svg>
           </span>
