--- a/Single-Player.html
+++ b/Single-Player.html
@@ -159,7 +159,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
     </section>
     <section class="u-align-center u-clearfix u-grey-80 u-section-5" id="sec-0012">
       <h2 class="u-align-center u-custom-font u-text u-text-default u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="0">Besides adding new Multiplayer Maps, our Team is also working hard to add new Content for Octo Valley at each release.</h2>
-      <p class="u-align-center u-text u-text-default u-text-grey-60 u-text-2">Note: Not every Release automatically features new content for Octo Valley.</p>
+      <p class="u-align-center u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-grey-60 u-text-2">Note: Not every Release automatically features new content for Octo Valley.</p>
     </section>
     <section class="u-clearfix u-grey-80 u-valign-middle u-section-6" id="sec-a944">
       
@@ -172,7 +172,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
             <div class="u-size-30">
               <div class="u-layout-row">
                 <div class="u-container-style u-grey-75 u-layout-cell u-radius u-shape-round u-size-31 u-layout-cell-1">
-                  <div class="u-border-10 u-border-grey-75 u-container-layout u-container-layout-1">
+                  <div class="u-border-10 u-border-grey-75 u-container-layout u-valign-middle-xs u-container-layout-1">
                     <h3 class="u-align-center u-custom-font u-hover-feature u-text u-text-1">Octo Valley World 2 + Hub<br>
                     </h3>
                   </div>
