--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
               <p class="u-align-left u-text u-text-white u-text-9"> - Octo Valley Hub</p>
               <p class="u-align-left u-text u-text-white u-text-10">- Octo Valley Levels (W1-5)</p>
               <p class="u-align-left u-text u-text-11">- Octo Valley Layouts</p>
-              <img class="u-image u-image-contain u-image-default u-opacity u-opacity-35 u-preserve-proportions u-image-2" src="images/Unbenannt-21-11.png" alt="" data-image-width="146" data-image-height="150">
+              <img class="u-image u-image-contain u-image-default u-opacity u-opacity-35 u-preserve-proportions u-image-2" src="images/Unbenannt-21-14.png" alt="" data-image-width="146" data-image-height="150">
               <p class="u-align-left u-text u-text-12">- Music</p>
             </div>
           </div>
@@ -140,7 +140,7 @@
       <a href="Updates.html" class="u-border-none u-btn u-btn-round u-button-style u-custom-font u-grey-50 u-radius u-text-palette-4-light-1 u-btn-3">Jump to Page </a>
       <div class="u-expanded-width u-grey-75 u-shape u-shape-rectangle u-shape-1"></div>
     </section>
-    <section class="u-align-center u-clearfix u-grey-80 u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-section-4" id="sec-4d8a">
+    <section class="u-align-center u-clearfix u-grey-80 u-section-4" id="sec-4d8a">
       <h2 class="u-custom-font u-text u-text-default u-text-1">Assets </h2>
       <h2 class="u-custom-font u-text u-text-2">Map Ports</h2>
       <h2 class="u-custom-font u-text u-text-default u-text-3">Octo Valley</h2>
