Fixed Skibidi Spelling issue

--- a/Updates.html
+++ b/Updates.html
@@ -163,7 +163,7 @@
                 </div>
                 <div class="u-container-style u-grey-80 u-layout-cell u-radius u-shape-round u-size-30 u-layout-cell-8">
                   <div class="u-border-2 u-border-grey-75 u-container-layout u-valign-bottom-xs u-container-layout-8">
-                    <h3 class="u-align-center u-custom-font u-hover-feature u-text u-text-10">Improved Lightnings</h3>
+                    <h3 class="u-align-center u-custom-font u-hover-feature u-text u-text-10"> Improved ​Lighting</h3>
                     <p class="u-align-center u-hover-feature u-text u-text-11">Horray! We've overworked the Lightnings on most of the previous stages, and made sure that our Wave 3 maps look good enough to not require a hotfix in a later update.<br>Hopefully you'll enjoy it just as much as we do.<br>We can't wait to let you play with Wave 3!
                     </p>
                   </div>
