--- a/Updates.html
+++ b/Updates.html
@@ -112,7 +112,7 @@
             <div class="u-size-30">
               <div class="u-layout-row">
                 <div class="u-container-style u-grey-80 u-layout-cell u-radius u-shape-round u-size-21 u-layout-cell-1">
-                  <div class="u-border-2 u-border-grey-75 u-container-layout u-valign-middle-sm u-valign-middle-xs u-valign-top-lg u-valign-top-md u-valign-top-xl u-container-layout-1">
+                  <div class="u-border-2 u-border-grey-75 u-container-layout u-valign-middle-sm u-valign-top-lg u-valign-top-md u-valign-top-xl u-container-layout-1">
                     <h3 class="u-align-center u-custom-font u-hidden-sm u-hidden-xs u-hover-feature u-text u-text-3">The Reef<br>
                     </h3>
                     <p class="u-align-center u-hidden-sm u-hidden-xs u-hover-feature u-text u-text-4">The winner of our discord votings - The Reef is back! <br>It took us some nervs but it's finally (nearly) complete.
@@ -146,7 +146,7 @@
                   <div class="u-container-layout u-container-layout-4"></div>
                 </div>
                 <div class="u-container-style u-grey-80 u-layout-cell u-radius u-shape-round u-size-19 u-layout-cell-5">
-                  <div class="u-border-2 u-border-grey-75 u-container-layout u-valign-middle-sm u-valign-middle-xs u-container-layout-5">
+                  <div class="u-border-2 u-border-grey-75 u-container-layout u-valign-middle-sm u-container-layout-5">
                     <h3 class="u-align-center u-custom-font u-hidden-sm u-hidden-xs u-hover-feature u-text u-text-13">Saltspray Rig</h3>
                     <p class="u-align-center u-hidden-sm u-hidden-xs u-hover-feature u-text u-text-14">We originally wanted to add this map at the early beginning in Wave 1 a​​lready, but then decided to release it at a later point. Saltspray Rig is gonna be part of Wave 3!</p>
                     <p class="u-align-center u-hidden-lg u-hidden-md u-hidden-sm u-hidden-xl u-hover-feature u-text u-text-15"> Look what we've got right there:<br>MUSSELFORGE IS BACK!
@@ -174,10 +174,10 @@
                 <div class="u-container-align-center u-container-style u-image u-image-contain u-image-round u-layout-cell u-radius u-size-30 u-image-4" data-image-width="1920" data-image-height="1080" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="0">
                   <div class="u-container-layout u-container-layout-7"></div>
                 </div>
-                <div class="u-container-style u-grey-80 u-layout-cell u-radius u-shape-round u-size-30 u-layout-cell-8">
+                <div class="u-align-center-xs u-container-style u-grey-80 u-layout-cell u-radius u-shape-round u-size-30 u-layout-cell-8">
                   <div class="u-border-2 u-border-grey-75 u-container-layout u-valign-bottom-xs u-container-layout-8">
-                    <h3 class="u-align-center u-custom-font u-hover-feature u-text u-text-19"> Improved ​Lighting</h3>
-                    <p class="u-align-center u-hover-feature u-text u-text-20">Horray! We've overworked the Lightnings on most of the previous stages, and made sure that our Wave 3 maps look good enough to not require a hotfix in a later update.<br>Hopefully you'll enjoy it just as much as we do.<br>We can't wait to let you play with Wave 3!
+                    <h3 class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xl u-custom-font u-hover-feature u-text u-text-19"> Improved​Lighting</h3>
+                    <p class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xl u-hover-feature u-text u-text-20">Horray! We've overworked the Lightnings on most of the previous stages, and made sure that our Wave 3 maps look good enough to not require a hotfix in a later update.<br>Hopefully you'll enjoy it just as much as we do.<br>We can't wait to let you play with Wave 3!
                     </p>
                   </div>
                 </div>
