fixed spelling issues

--- a/Single-Player.html
+++ b/Single-Player.html
@@ -197,7 +197,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
           </div>
         </div>
       </div>
-      <p class="u-align-center u-hover-feature u-text u-text-grey-50 u-text-3">More content will be showed soon.</p>
+      <p class="u-align-center u-hover-feature u-text u-text-grey-50 u-text-3">More content will be shown soon.</p>
       <div class="u-expanded-width u-grey-70 u-shape u-shape-rectangle u-shape-1"></div>
     </section>
     <section class="u-clearfix u-grey-80 u-valign-middle u-section-7" id="sec-32ce">
