--- a/Home.html
+++ b/Home.html
@@ -105,7 +105,7 @@
               <h6 class="u-align-left u-custom-font u-text u-text-grey-50 u-text-2">In Progress</h6>
               <p class="u-align-left u-text u-text-white u-text-3">- Previous Stages (Sp1 &amp; Sp2)</p>
               <p class="u-align-left u-text u-text-white u-text-4">- Upgraded Enviroment</p>
-              <p class="u-align-left u-text u-text-5">- Weapons Kits/Gears<br>
+              <p class="u-align-left u-text u-text-5">- No Paint issues<br>
               </p>
               <img class="u-image u-image-contain u-image-default u-opacity u-opacity-35 u-preserve-proportions u-image-1" src="images/Unbenannt-21.png" alt="" data-image-width="109" data-image-height="112">
               <p class="u-align-left u-text u-text-6">- Layouts</p>
