--- a/Team.html
+++ b/Team.html
@@ -231,7 +231,7 @@
             <div class="u-container-layout u-similar-container u-container-layout-17"><span class="u-align-left u-file-icon u-icon u-icon-rectangle u-icon-17"><img src="images/yt.png" alt=""></span>
               <h6 class="u-align-left u-text u-text-35">YouTube</h6>
               <p class="u-align-left u-text u-text-36">
-                <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-hover-custom-color-3 u-text-palette-4-base u-btn-4" data-href="https://www.youtube.com/@ProjectGander" data-target="_blank" href="https://www.youtube.com/@ProjectReduxS3" target="_blank">Click here</a>
+                <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-hover-custom-color-3 u-text-palette-4-base u-btn-4" data-href="https://www.youtube.com/@ProjectReduxS3" data-target="_blank" href="https://www.youtube.com/@ProjectReduxS3" target="_blank">Click here</a>
               </p>
             </div>
           </div>
