--- a/Updates.html
+++ b/Updates.html
@@ -261,7 +261,7 @@
             <div class="u-container-layout u-similar-container u-container-layout-5"><span class="u-align-left u-file-icon u-icon u-icon-rectangle u-icon-3"><img src="images/yt.png" alt=""></span>
               <h6 class="u-align-left u-text u-text-7">YouTube</h6>
               <p class="u-align-left u-text u-text-8">
-                <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-hover-custom-color-3 u-text-palette-4-base u-btn-3" data-href="https://www.youtube.com/@ProjectGander" data-target="_blank" href="https://www.youtube.com/@ProjectReduxS3" target="_blank">Click here</a>
+                <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-hover-custom-color-3 u-text-palette-4-base u-btn-3" data-href="https://www.youtube.com/@ProjectReduxS3" data-target="_blank" href="https://www.youtube.com/@ProjectReduxS3" target="_blank">Click here</a>
               </p>
             </div>
           </div>
